clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00004.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00004.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = alloca s32i*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 4 : s32i
        store %4, %1, align 4
        store %1, %2, align 8
        %5 = const 0 : s32i
        %6 = load %2 : s32i*, align 8
        store %5, %6, align 4
        %7 = load %2 : s32i*, align 8
        %8 = load %7 : s32i, align 4
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
