clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00005.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00005.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = alloca s32i*, "p", align 8
        %3 = alloca s32i**, "pp", align 8
        %4 = const 0 : s32i
        store %4, %0
        %5 = const 0 : s32i
        store %5, %1, align 4
        store %1, %2, align 8
        store %2, %3, align 8
        scope {
                %22 = load %2 : s32i*, align 8
                %23 = load %22 : s32i, align 4
                %24 = cast(int_to_bool) %23 : bool
                if %24 {
                        %25 = const 1 : s32i
                        store %25, %0
                        %26 = load %0 : s32i
                        return %26
                }
                yield
        }
        scope {
                %13 = load %3 : s32i**, align 8
                %14 = load %13 : s32i*, align 8
                %15 = load %14 : s32i, align 4
                %16 = cast(int_to_bool) %15 : bool
                if %16 {
                        %20 = const 1 : s32i
                        store %20, %0
                        %21 = load %0 : s32i
                        return %21
                } else {
                        %17 = const 1 : s32i
                        %18 = load %3 : s32i**, align 8
                        %19 = load %18 : s32i*, align 8
                        store %17, %19, align 4
                        yield
                }
                yield
        }
        scope {
                %7 = load %1 : s32i, align 4
                %8 = cast(int_to_bool) %7 : bool
                if %8 {
                        %11 = const 0 : s32i
                        store %11, %0
                        %12 = load %0 : s32i
                        return %12
                } else {
                        %9 = const 1 : s32i
                        store %9, %0
                        %10 = load %0 : s32i
                        return %10
                }
                yield
        }
        %6 = load %0 : s32i
        return %6
}
