clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00006.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00006.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 50 : s32i
    store %3, %1, align 4
    scope {
        while {
            %9 = load %1 : s32i, align 4
            %10 = cast(int_to_bool) %9 : bool
            condition %10
        } do {
            %6 = load %1 : s32i, align 4
            %7 = const 1 : s32i
            %8 = sub %6, %7 : s32i [nsw]
            store %8, %1, align 4
            yield
        }
        yield
    }
    %4 = load %1 : s32i, align 4
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
