clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00009.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00009.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        store %3, %1, align 4
        %4 = load %1 : s32i, align 4
        %5 = const 10 : s32i
        mul
        store %6, %1, align 4
        %7 = load %1 : s32i, align 4
        %8 = const 2 : s32i
        div
        store %9, %1, align 4
        %10 = load %1 : s32i, align 4
        %11 = const 3 : s32i
        rem
        store %12, %1, align 4
        %13 = load %1 : s32i, align 4
        %14 = const 2 : s32i
        sub
        store %15, %0
        %16 = load %0 : s32i
        return %16
}
