clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00010.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00010.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        br ^bb1
    ^bb1:
        label start:
        goto next
    ^bb2:
        %2 = const 1 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
    ^bb3:
        label success:
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
    ^bb4:
        label next:
        br ^bb5
    ^bb5:
        label foo:
        goto success
    ^bb6:
        %6 = const 1 : s32i
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
