clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00011.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00011.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = alloca s32i, "y", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 0 : s32i
        store %4, %2, align 4
        store %4, %1, align 4
        %5 = load %1 : s32i, align 4
        store %5, %0
        %6 = load %0 : s32i
        return %6
}
